edit in ADSRs and chord patches

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 wavetable/ADSR patches dedicated to RebelTech Owl module
-inspired from earlevel nigel's code
+inspired from earlevel nigel Redmon 's code: http://www.earlevel.com/main/category/digital-audio/oscillators/wavetable-oscillators/
+
+RebelTech.org : https://www.rebeltech.org/patch-library/patch/WT_Single_Osc
 
 alexniger
